anthos/cluster/gpu-operator/clusterpolicy.yaml
---
# Source: gpu-operator/templates/clusterpolicy.yaml
apiVersion: nvidia.com/v1
kind: ClusterPolicy
metadata:
  name: cluster-policy
  labels:
    app.kubernetes.io/component: "gpu-operator"
    
spec:
  operator:
    defaultRuntime: docker
    runtimeClass: nvidia
    initContainer:
      repository: nvcr.io/nvidia
      image: cuda
      version: "11.4.2-base-ubi8"
      imagePullPolicy: IfNotPresent
  daemonsets:
    tolerations: 
      - effect: NoSchedule
        key: nvidia.com/gpu
        operator: Exists
    priorityClassName: system-node-critical
  validator:
    repository: nvcr.io/nvidia/cloud-native
    image: gpu-operator-validator
    version: "v1.10.1"
    imagePullPolicy: IfNotPresent
    securityContext: 
      privileged: true
      seLinuxOptions:
        level: s0
    plugin:
      env: 
        - name: WITH_WORKLOAD
          value: "true"
  mig:
    strategy: single
  psp:
    enabled: false
  driver:
    enabled: false
    repository: nvcr.io/nvidia
    image: driver
    version: "510.47.03"
    imagePullPolicy: IfNotPresent
    rdma:
      enabled: false
      useHostMofed: false
    manager:
      repository: nvcr.io/nvidia/cloud-native
      image: k8s-driver-manager
      version: "v0.3.0"
      imagePullPolicy: IfNotPresent
      env: 
        - name: ENABLE_AUTO_DRAIN
          value: "true"
        - name: DRAIN_USE_FORCE
          value: "false"
        - name: DRAIN_POD_SELECTOR_LABEL
          value: ""
        - name: DRAIN_TIMEOUT_SECONDS
          value: 0s
        - name: DRAIN_DELETE_EMPTYDIR_DATA
          value: "false"
    repoConfig: 
      configMapName: ""
    certConfig: 
      name: ""
    licensingConfig: 
      configMapName: ""
      nlsEnabled: false
    virtualTopology: 
      config: ""
    kernelModuleConfig: 
      name: ""
    securityContext: 
      privileged: true
      seLinuxOptions:
        level: s0
  toolkit:
    enabled: true
    repository: nvcr.io/nvidia/k8s
    image: container-toolkit
    version: "v1.9.0-ubuntu20.04"
    imagePullPolicy: IfNotPresent
    securityContext: 
      privileged: true
      seLinuxOptions:
        level: s0
  devicePlugin:
    repository: nvcr.io/nvidia
    image: k8s-device-plugin
    version: "v0.11.0-ubi8"
    imagePullPolicy: IfNotPresent
    securityContext: 
      privileged: true
    env: 
      - name: PASS_DEVICE_SPECS
        value: "true"
      - name: FAIL_ON_INIT_ERROR
        value: "true"
      - name: DEVICE_LIST_STRATEGY
        value: envvar
      - name: DEVICE_ID_STRATEGY
        value: uuid
      - name: NVIDIA_VISIBLE_DEVICES
        value: all
      - name: NVIDIA_DRIVER_CAPABILITIES
        value: all
  dcgm:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: dcgm
    version: "2.3.4-1-ubuntu20.04"
    imagePullPolicy: IfNotPresent
    hostPort: 5555
  dcgmExporter:
    repository: nvcr.io/nvidia/k8s
    image: dcgm-exporter
    version: "2.3.4-2.6.4-ubuntu20.04"
    imagePullPolicy: IfNotPresent
    env: 
      - name: DCGM_EXPORTER_LISTEN
        value: :9400
      - name: DCGM_EXPORTER_KUBERNETES
        value: "true"
      - name: DCGM_EXPORTER_COLLECTORS
        value: /etc/dcgm-exporter/dcp-metrics-included.csv
  gfd:
    repository: nvcr.io/nvidia
    image: gpu-feature-discovery
    version: "v0.5.0"
    imagePullPolicy: IfNotPresent
    env: 
      - name: GFD_SLEEP_INTERVAL
        value: 60s
      - name: GFD_FAIL_ON_INIT_ERROR
        value: "true"
  migManager:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: k8s-mig-manager
    version: "v0.3.0-ubuntu20.04"
    imagePullPolicy: IfNotPresent
    securityContext: 
      privileged: true
    env: 
      - name: WITH_REBOOT
        value: "false"
    config: 
      name: ""
    gpuClientsConfig: 
      name: ""
  nodeStatusExporter:
    enabled: false
    repository: nvcr.io/nvidia/cloud-native
    image: gpu-operator-validator
    version: "v1.10.1"
    imagePullPolicy: IfNotPresent
